# Classic-AI

./: CMakeLists.txt  README.md  graph.dot
include/: AIAlgorithm.h  ControlStrategy.h  GTNode.h  GTree.h  JHPRuleSet.h  JHPState.h  JealousHusbandsProblem.h  Problem.h  RubikProblem.h  RubikRuleSet.h  RubikState.h  RuleSet.h  State.h
src/: AIAlgorithm.cpp  ControlStrategy.cpp  GTNode.cpp  GTree.cpp  JHPRuleSet.cpp  JHPState.cpp  JealousHusbandsProblem.cpp  Problem.cpp  RubikProblem.cpp  RubikRuleSet.cpp  RubikState.cpp  RuleSet.cpp  State.cpp  main.cpp
